gitops/cluster-config/forgejo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    managed-by: gitops
